--- a/package/src/BuyCryptoView/PaymentMethodPicker/PaymentMethodPicker.module.css
+++ b/package/src/BuyCryptoView/PaymentMethodPicker/PaymentMethodPicker.module.css
@@ -6,8 +6,8 @@
 }
 
 .option-wrapper {
-    width: 7.83rem;
-    height: 3.5625rem;
+    width: 124px;
+    height: 57px;
     padding: 0.5rem;
     padding-top: 0.563rem;
     font-size: 13px;
