--- a/package/src/BuyCryptoView/ScreenA/InputDropdown/InputDropdown.module.css
+++ b/package/src/BuyCryptoView/ScreenA/InputDropdown/InputDropdown.module.css
@@ -61,3 +61,15 @@
 .dropdown-handle {
     margin-right: 22px;
 }
+
+@media (max-width: 350px) { 
+    .label {
+        font-size: 13px;
+        line-height: 16px;
+    }
+
+    .input {
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
